@@ -1081,6 +1081,8 @@ fz_device *fz_new_list_device(fz_display_list *list);
 void fz_execute_display_list(fz_display_list *list, fz_device *dev, fz_matrix ctm, fz_bbox area);
 /* SumatraPDF: allow to optimize handling of single-image pages */
 int fz_list_is_single_image(fz_display_list *list);
+/* SumatraPDF: allow to detect pages requiring blending */
+int fz_list_requires_blending(fz_display_list *list);
 
 /*
  * Plotting functions.
