@@ -8,6 +8,7 @@ Next version:
 * support touch gestures (available on Windows 7 or later)
   (contributed by Robert Prouse)
 * open linked audio and video files in an external media player
+* improved support for PDF transparency groups
 
 1.8 (2011-09-18)
 
